2009-02-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XmlTagState.cs:
	* MonoDevelop.Xml.StateEngine/XmlAttributeState.cs:
	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs:
	  Improve error handling.

2009-02-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor/XmlDocumentParser.cs: Fix logic error
	  that caused NRE with empty documents.

2009-02-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Use Pad
	  font.

2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.csproj: Local-copy schemas.

2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.csproj: Nuke another project reference
	  local copy.

2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.csproj: Exorcise more unwanted local
	  copy.

2009-02-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs:
	* MonoDevelop.XmlEditor.Completion/XmlSchemaCompletionData.cs:
	  Fixed compiler warnings.

2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor.mds:
	* MonoDevelop.XmlEditor.mdp:
	* MonoDevelop.XmlEditor.csproj: Migrated to MSBuild file
	  format.

2009-02-03  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Fix
	  duplicated ':' when completing incompletely parsed names
	  for the path bar.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.XmlEditor.addin.xml: Bump MD version.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* MonoDevelop.XmlEditor.mdp:
	* gtk-gui/MonoDevelop.XmlEditor.Gui.XmlSchemasPanelWidget.cs:
	*
	  gtk-gui/MonoDevelop.XmlEditor.Gui.XmlEditorOptionsPanelWidget.cs:
	  Flush.

2009-02-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Completion/XmlCompletionData.cs: