@@ -1,3 +1,8 @@
+2009-02-20  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs: Don't
+	  end attribute values on > character.
+
 2009-02-13  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.Xml.StateEngine/XmlTagState.cs:
